fix overflow bug

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -20,4 +20,5 @@
 body {
   font-family: 'DM Sans', sans-serif;
   font-style: normal;
+  overflow-x: hidden;
 }
